--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </li>
               </ul>
             </nav>
-            <address class="mobile-contacts">
+            <address>
               <ul class="mobile-contacts-list">
                 <li class="mobile-contacts-item">
                   <a
@@ -103,12 +103,12 @@
                 </li>
               </ul>
             </address>
-            <div>
-              <ul class="">
-                <li class="our-team-icons-item">
-                  <a class="our-team-icons-link" href="">
+            <div class="mobile-network">
+              <ul class="mobile-network-list">
+                <li class="mobile-network-item">
+                  <a class="mobile-network-link" href="">
                     <svg
-                      class="our-team-icons vector_graphics"
+                      class="network-icons vector_graphics"
                       width="16"
                       height="16"
                     >
@@ -117,38 +117,38 @@
                   </a>
                 </li>
 
-                <li class="our-team-icons-item">
-                  <a class="our-team-icons-link" href="">
+                <li class="mobile-network-item">
+                  <a class="mobile-network-link" href="">
                     <svg
-                      class="our-team-icons vector_graphics"
+                      class="network-icons vector_graphics"
                       width="16"
                       height="16"
                     >
-                      <use href="./images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li class="our-team-icons-item">
-                  <a class="our-team-icons-link" href="">
+                <li class="mobile-network-item">
+                  <a class="mobile-network-link" href="">
                     <svg
-                      class="our-team-icons vector_graphics"
+                      class="network-icons vector_graphics"
                       width="16"
                       height="16"
                     >
-                      <use href="./images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
 
-                <li class="our-team-icons-item">
-                  <a class="our-team-icons-link" href="">
+                <li class="mobile-network-item">
+                  <a class="mobile-network-link" href="">
                     <svg
-                      class="our-team-icons vector_graphics"
+                      class="network-icons vector_graphics"
                       width="16"
                       height="16"
                     >
-                      <use href="./images/icons.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
