--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
             <nav class="mobile-menu-nav">
               <ul class="mobile-menu-list">
                 <li class="mobile-menu-item">
-                  <a class="mobile-menu-link another" href="./index.html"
-                    >Studio</a
-                  >
+                  <a class="mobile-menu-link" href="./index.html">Studio</a>
                 </li>
                 <li class="mobile-menu-item">
                   <a href="" class="mobile-menu-link">Portfolio</a>
@@ -87,7 +85,7 @@
                 </li>
               </ul>
             </nav>
-            <address>
+            <address class="mobile-contacts">
               <ul class="mobile-contacts-list">
                 <li class="mobile-contacts-item">
                   <a
@@ -161,7 +159,8 @@
 
     <!-- main -->
     <main>
-      <section class="main-title-section hidden">
+      <!-- Effective Solutions -->
+      <section class="main-title-section">
         <div class="container">
           <h1 class="main-title-effective">
             Effective Solutions for Your Business
@@ -173,7 +172,7 @@
       </section>
 
       <!-- soft-Skills -->
-      <section class="soft-skills hidden">
+      <section class="soft-skills">
         <div class="container">
           <h2 hidden class="visually-hidden">Soft Skills</h2>
           <ul class="soft-skills-list">
