work on mistakes

--- a/index.html
+++ b/index.html
@@ -53,20 +53,17 @@
             </li>
           </ul>
         </address>
+
+        <!-- menu modal -->
         <button class="burger-btn" type="button" data-menu-open>
           <svg class="burger-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
         </button>
 
-        <div class="mobile-menu" data-modal-menu>
+        <div class="mobile-menu" data-menu>
           <div class="container mobile-menu-container">
-            <button
-              class="mobile-menu-close"
-              data-menu-close
-              type="button"
-              data-modal-close
-            >
+            <button class="mobile-menu-close" data-menu-close type="button">
               <svg class="modal-button-icons" width="8" height="8">
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
@@ -75,7 +72,9 @@
             <nav class="mobile-menu-nav">
               <ul class="mobile-menu-list">
                 <li class="mobile-menu-item">
-                  <a class="mobile-menu-link" href="./index.html">Studio</a>
+                  <a class="mobile-menu-link studio-color" href="./index.html"
+                    >Studio</a
+                  >
                 </li>
                 <li class="mobile-menu-item">
                   <a href="" class="mobile-menu-link">Portfolio</a>
@@ -89,14 +88,16 @@
               <ul class="mobile-contacts-list">
                 <li class="mobile-contacts-item">
                   <a
-                    href="mailto:info@devstudio.com"
-                    class="mobile-contacts-link"
-                    >info@devstudio.com</a
+                    href="tel:+110001111111"
+                    class="mobile-contacts-link nomer-color"
+                    >+11 (000) 111-11-11</a
                   >
                 </li>
                 <li class="mobile-contacts-item">
-                  <a href="tel:+110001111111" class="mobile-contacts-link"
-                    >+11 (000) 111-11-11</a
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="mobile-contacts-link"
+                    >info@devstudio.com</a
                   >
                 </li>
               </ul>
@@ -107,8 +108,8 @@
                   <a class="mobile-network-link" href="">
                     <svg
                       class="network-icons vector_graphics"
-                      width="16"
-                      height="16"
+                      width="24"
+                      height=""
                     >
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
@@ -119,8 +120,8 @@
                   <a class="mobile-network-link" href="">
                     <svg
                       class="network-icons vector_graphics"
-                      width="16"
-                      height="16"
+                      width="24"
+                      height="24"
                     >
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
@@ -131,8 +132,8 @@
                   <a class="mobile-network-link" href="">
                     <svg
                       class="network-icons vector_graphics"
-                      width="16"
-                      height="16"
+                      width="24"
+                      height="24"
                     >
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
@@ -143,8 +144,8 @@
                   <a class="mobile-network-link" href="">
                     <svg
                       class="network-icons vector_graphics"
-                      width="16"
-                      height="16"
+                      width="24"
+                      height="24"
                     >
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
